--- a/.github/workflows/terraformCI.yaml
+++ b/.github/workflows/terraformCI.yaml
@@ -49,5 +49,5 @@ jobs:
           terraform_version: 0.14.7
 
       - name: Apply Terraform Changes
-        run: terraform apply -auto-approve tfplan
-        
+        run: |
+          terraform apply -auto-approve tfplan
