--- a/.github/workflows/terraformCI.yaml
+++ b/.github/workflows/terraformCI.yaml
@@ -1,23 +1,13 @@
 name: Terraform CI
-
-on:
-  pull_request:
-    branches:
-      - "*"
-
-jobs:
+on: push 
+jobs: 
   terraform:
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        os: [ubuntu-latest]
-
-    steps:
+   runs-on: ubuntu-latest
+   steps:
     - name: Checkout code
       uses: actions/checkout@v2
 
     - name: Terraform init & validate
-      runs-on: ubuntu-latest
       steps:
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v1
@@ -28,12 +18,3 @@ jobs:
         run: terraform init
       - name: Validate Terraform
         run: terraform validate
-
-    - name: Security Scan
-      runs-on: ubuntu-latest
-      steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-
-      - name: Security Scan
-        uses: atlassian/git-secrets-scan@0.5.1
