Feature/add pipeline

--- a/.github/workflows/TerraformCI.yaml
+++ b/.github/workflows/TerraformCI.yaml
@@ -3,11 +3,14 @@ name: Terraform Workflow
 on:
   push:
     branches:
-      - feature/*
+      - main
 
 jobs:
   terraform:
     runs-on: ubuntu-latest
+
+    env:
+      AWS_DEFAULT_REGION: us-west-1 
 
     steps:
     - name: Checkout Repository
@@ -17,6 +20,12 @@ jobs:
       uses: hashicorp/setup-terraform@v1
       with:
         terraform_version: 1.0.0
+
+    - name: AWS Configure
+      run: |
+        aws configure set aws_access_key_id ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws configure set aws_secret_access_key ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws configure set default.region ${{ env.AWS_DEFAULT_REGION }}
 
     - name: Terraform Init
       run: terraform init
